# cxxpm

./: Makefile  README.md  pyproject.toml
.github/workflows/: pr.yml
cxxpm/: __init__.py  cxxpm.py
scripts/: update_readme.py
tests/: test_tool.py
